2007-02-09  Neil Jagdish Patel  <njp@Fedora>

	Added 1 sec delay before window activates on drag.

	* src/awn-task.c: (awn_task_class_init), (awn_task_button_press),
	(activate_window), (awn_task_drag_motion), (awn_task_drag_leave),
	(awn_task_new):
	* src/awn-title.c: (render):

2007-02-09  Neil Jagdish Patel  <njp@Fedora>

	D&D works for entire bar. Bar has popup to close.

	* src/awn-bar.c: (render), (awn_bar_resize):
	* src/awn-task-manager.c: (awn_task_manager_new):
	* src/awn-task.c: (_task_drag_data_recieved):
	* src/awn-window.c: (awn_window_init), (render):
	* src/main.c: (main), (expose), (start_drag_animation),
	(drag_motion), (leave_notify_event), (close_function),
	(create_menu), (button_press_event):

2007-02-06  Neil Jagdish Patel  <njpatel@gmail.com>

	Better launcher to window matching code.

	* src/awn-task-manager.c:

2007-02-06  Neil Jagdish Patel  <njpatel@gmail.com>

	Cleanup of D&D code
	* src/awn-task.c: (_task_launched_effect), (awn_task_launch),
	(_task_drag_data_recieved):

2007-02-06  Neil Jagdish Patel  <njpatel@gmail.com>

	Launchers now support dragging of uris to them (to launch the program 
	with arguments.

	* src/awn-task-manager.c: Teaked drop code
	* src/awn-task.c: Added code for launching applications with uris.

2007-02-02  Neil Jagdish Patel  <njp@Fedora>

	Smart launcher support added

	* configure.in: now needs gnome-desktop and gnome-vfs to compile.
	* data/avant-window-navigator.schemas:
	* src/awn-gconf.c: (awn_gconf_new), (awn_load_bool),
	(awn_load_string), (awn_load_float), (awn_load_color),
	(_print_launchers), (awn_load_string_list):
	* src/awn-gconf.h:
	* src/awn-task-manager.c: (awn_task_manager_init),
	(_load_launchers_func), (_task_manager_load_launchers),
	(_find_launcher), (_task_manager_window_has_launcher),
	(_task_manager_window_opened), (_task_refresh), (_refresh_box),
	(awn_task_manager_new):
	* src/awn-task.c: (awn_task_init), (_task_attention_effect),