@@ -1,5 +1,9 @@
 2007-02-09  Neil Jagdish Patel  <njp@Fedora>
 
+	* src/main.c: popup now includes a link to avant-preferences
+
+2007-02-09  Neil Jagdish Patel  <njp@Fedora>
+
 	Added 1 sec delay before window activates on drag.
 
 	* src/awn-task.c: (awn_task_class_init), (awn_task_button_press),
